# Ultimate-Monorepo-and-Bazel-for-Building-Apps-at-Scale

./: README.md
chapter-10/bazel_optimizing_docker_builds/: MODULE.bazel  bazel-bazel_optimizing_docker_builds
chapter-10/bazel_optimizing_docker_builds/libraries/lib1/: BUILD.bazel
chapter-10/bazel_optimizing_docker_builds/libraries/lib1/src/main/java/com/lib1/: Lib1.java
chapter-10/bazel_optimizing_docker_builds/services/service1/: BUILD.bazel
chapter-10/bazel_optimizing_docker_builds/services/service1/src/main/java/com/service1/: Main.java  Service1.java
chapter-10/bazel_optimizing_docker_builds/services/service2/: BUILD.bazel
chapter-10/bazel_optimizing_docker_builds/services/service2/src/main/java/com/service2/: Main.java  Service2.java
chapter-6/bazel_ios/: .gitignore
chapter-7/bazel_linter/: MODULE.bazel  bazel-bazel_linter
chapter-7/bazel_linter/app/hellotest/: BUILD.bazel  pmd_rules.xml
